# Incredible-Data

./: .baseenv  .gitignore  .localenv  .pre-commit-config.yaml  .prodenv  CHANGELOG.md  README.md  bridge.yaml  build.sh  docker-compose.dev.yml  export.bat  export.sh  local.yml  manage.py  nixpacks.toml  noproxy.yml  production.yml  pyproject.toml  render.yaml  start.sh
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/workflows/: build_and_push_images.yml  release.yml
bridge-django-render/: build.sh  start.sh
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
incredible_data/: __init__.py  conftest.py
incredible_data/assets/: apps.py
incredible_data/bins/: admin.py  apps.py  bins_forms.py  bins_tables.py  bins_views.py  resources.py  urls.py  views.py
incredible_data/bins/management/commands/: bulk_create.py
incredible_data/bins/migrations/: 0001_initial.py  0002_alter_container_id.py  0003_alter_container_id.py  0004_alter_container_image.py  0005_alter_container_id.py  0006_alter_container_id.py  0007_remove_container_image_containerattachment_and_more.py  0008_containerattachment_name.py  0009_fix_attachment_names.py  0010_alter_containerattachment_name.py
incredible_data/bins/models/: bins_asset_models.py  bins_container_models.py  bins_house_models.py
incredible_data/budget/: admin.py  apps.py  budget_custom_fields.py  budget_custom_form_fields.py  budget_hot_views.py  budget_signals.py  budget_urls.py  incredible_data_helpers.py  models.py  receipt_services.py
incredible_data/budget/fixtures/budget/: example_receipt_result.json  expense_categories.yml
incredible_data/budget/migrations/: 0001_initial.py  0002_alter_receiptfile_analyze_result.py  0003_alter_receiptfile_analyzed_datetime.py  0004_receipt_receipt_file.py  0005_remove_receipt_created_remove_receipt_created_by_and_more.py  0006_receipt_grand_total_confidence.py  0007_receiptitem.py  0008_alter_receiptitem_uuid.py  0009_expensecategory_receiptitem_taxable_and_more.py  0010_alter_expensecategory_options.py  0011_alter_receipt_grand_total_confidence_and_more.py
incredible_data/budget/models/: budget_receipt_models.py
incredible_data/budget/tests/: test_receipts.py
incredible_data/business/: admin.py  apps.py  urls.py  views.py
incredible_data/business/forms/: business_accounting_forms.py
incredible_data/business/migrations/: 0001_initial.py  0002_invoice_order.py  0003_alter_invoice_number.py  0004_project.py  0005_order_slug_alter_order_number.py  0006_alter_invoice_created_by_alter_invoice_modified_by_and_more.py
incredible_data/business/models/: business_accounting_models.py  business_inventory_models.py  business_project_models.py
incredible_data/business/tables/: business_accounting_tables.py  business_project_tables.py
incredible_data/business/templatetags/: business_extras.py
incredible_data/contacts/: admin.py  apps.py  models.py
incredible_data/contacts/migrations/: 0001_initial.py  0002_alter_contact_created_by_alter_contact_full_name_and_more.py  0003_documentnumber.py  0004_alter_documentnumber_padding_digits.py
incredible_data/contacts/models/: __init__.py  contacts_models.py  utility_models.py
incredible_data/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
incredible_data/customers/: admin.py  apps.py  models.py
incredible_data/customers/management/commands/: import_customers.py
incredible_data/customers/migrations/: 0001_initial.py  0002_customer_main_phone_alter_customer_created_by_and_more.py  0003_alter_customer_created_by_alter_customer_modified_by.py
incredible_data/events/: apps.py  models.py  quickstart.py  tests.py
incredible_data/events/clients/google/: auth.py  interface.py  models.py
incredible_data/fuel/: admin.py  apps.py  geolocate.py  models.py  tests.py
incredible_data/fuel/migrations/: 0001_initial.py
incredible_data/helpers/: __init__.py  functions.py  helper_views.py  pydantic.py  test_functions.py
incredible_data/properties/: admin.py  apps.py  views.py
incredible_data/properties/models/: properties_models.py
incredible_data/static/css/: project.css
incredible_data/templates/: base.html  base_confirm_delete.html  base_list_tables2.html  navbar.html  object_detail.html
incredible_data/templates/bins/: container_attachment_confirm_delete.html  container_confirm_delete.html  container_detail.html  container_list.html
incredible_data/templates/budget/: create.html
incredible_data/templates/business/: invoice.html
incredible_data/templates/pages/: home.html
incredible_data/templates/properties/: property_list.html
incredible_data/templates/users/: user_detail.html
incredible_data/users/: adapters.py  apps.py  callables.py  models.py  views.py
incredible_data/users/api/: serializers.py  views.py
incredible_data/users/migrations/: 0001_initial.py
incredible_data/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  linux-py3.10-local.txt  linux-py3.10-production.txt  linux-py3.11-docs.txt  linux-py3.11-local.txt  linux-py3.11-production.txt  local-manual.txt  local.txt  production.txt  win32-py3.11-local.txt  win32-py3.12-local.txt
requirements/in/: base.in  docs.in  local.in  production.in
sampleenvs/: .localenv
